--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="sort_ascend_by_name">按歌名升序</string>
     <string name="sort_descend_by_name">按歌名降序</string>
     <string name="sort_by_add_time">按添加时间排序</string>
+    <string name="delete_all">全删</string>
 
 </resources>
