支持查看歌曲详细信息

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="sort_descend_by_name">按歌名降序</string>
     <string name="sort_by_add_time">按添加时间排序</string>
     <string name="delete_all">全删</string>
+    <string name="menu_song_add">添加歌曲</string>
+    <string name="menu_song_del">删除</string>
+    <string name="menu_song_detail">歌曲信息</string>
 
 </resources>
