--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">梦音乐</string>
-    <string name="song_db_name">T_SONG_LIST</string>
+    <string name="play_list_db_name">T_PLAY_LIST</string>
+    <string name="local_song_db_name">T_LOCAL_SONG</string>
     <string name="undefined">未知</string>
     <string name="complete">完成</string>
     <string name="ascend">升序</string>
